--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+body {
+    height: 100%;
+    background-image: url("../img/bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .hidden {
     display: none;
 }
